<resources>
    <string name="app_name">RunRun</string>
    <string name="xml_button">Xml Parsing Button</string>
    <string name="xml_text">Xml Parsing Textview</string>
    <string name="connection_error">Connection Error Occur!</string>
    <string name="xml_error">Xml Error Occur!</string>
    <string name="page_title">Page Title</string>
    <string name="updated">Just Updated!</string>

    <string name="notification_context_text">RunRun 실행</string>
    <string name="notification_context_title">버스 도착 예정 정보를 가져오기 시작했습니다..</string>

    <string name="parsed_data">Parsed Data</string>
    <string name="this_is_parsed_xml">this is parsed xml</string>
    <string name="this_is_second_textview">this is second textview</string>
    <string name="enter_bus">enter busNm</string>
    <string name="enter_station">enter stationNm</string>
    <string name="apply">apply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_map_practice_contentDescription">google map practice contentDescription</string>
    <string name="selected_bus_name">Selected Bus Name</string>
    <string name="selected_station_name">Selected Station Name</string>
    <string name="pick_a_day">pick a day</string>
    <string name="pick_a_time">pick a time</string>
    <string name="name_of_notification">name of notification</string>
    <string name="next">NEXT</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="congrats">Congratulations! \nWeekly Alarm is successfully set.</string>
    <string name="returnTo">return to main</string>
    <string name="mainDescription">welcome to main page</string>
    <string name="drawer_opened">드로어가 열림</string>
    <string name="drawer_closed">드로어가 닫힘\n</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- 로그인 auth 구현 중 -->
    <string name="default_client_id">85415682290-0r461j96mlvk7if9nfoumhq1no37hjt0.apps.googleusercontent.com</string>


</resources>