<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/selected_bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/selected_bus_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selected_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/selected_station_name"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_bus" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day"
        app:singleLine="false"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/mondayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:checkable="true"
            app:chipBackgroundColor="@color/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tuesdayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:checkable="true"
            app:chipBackgroundColor="@color/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/wednesdayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:checkable="true"
            app:chipBackgroundColor="@color/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/thursdayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:checkable="true"
            app:chipBackgroundColor="@color/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fridayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:checkable="true"
            app:chipBackgroundColor="@color/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/saturdayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:checkable="true"
            app:chipBackgroundColor="@color/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sundayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:checkable="true"
            app:chipBackgroundColor="@color/chip_background_selector" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="168dp"
        android:text="@string/pick_a_day"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/pick_a_time"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <Spinner
        android:id="@+id/startHourSpinner"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toEndOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/endMinuteSpinner"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/startHourSpinner2"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="44dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startHourSpinner"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/endMinuteSpinner2"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endMinuteSpinner"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/name_of_notification"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:autofillHints="name of notification"
        android:ems="10"
        android:hint="@string/name_of_notification"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startHourSpinner2" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>